# KHRay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependencies/embree/include/embree/: rtcore_config.h
KHRay/: KHRay.sln  KHRay.vcxproj  KHRay.vcxproj.filters  Spectrum.cpp  Spectrum.h  Texture2D.h
KHRay/KHRay/: AccelerationStructure.cpp  AccelerationStructure.h  BSDF.cpp  BSDF.h  BxDF.cpp  BxDF.h  Camera.cpp  Camera.h  Device.cpp  Device.h  Material.h  Math.h  Random.h  Ray.cpp  Ray.h  Sampling.cpp  Sampling.h  Scene.cpp  Scene.h  Spectrum.cpp  Spectrum.h  Texture2D.h  Transform.cpp  Transform.h  Triangle.h  Utility.h  Vector2.h  Vector3.h  Vertex.h  WaveFrontReader.h  main.cpp
KHRay/KHRay/Integrator/: AOIntegrator.cpp  AOIntegrator.h  Integrator.cpp  Integrator.h  NormalIntegrator.cpp  NormalIntegrator.h  PathIntegrator.cpp  PathIntegrator.h
KHRay/KHRay/Light/: Light.cpp  Light.h
KHRay/KHRay/Material/: Disney.cpp  Disney.h
KHRay/KHRay/Sampler/: Random.cpp  Random.h  Sampler.cpp  Sampler.h  Sobol.cpp
Source/: CMakeLists.txt  main.cpp  pch.h
Source/Engine/: AccelerationStructure.cpp  AccelerationStructure.h  BSDF.cpp  BSDF.h  BSSRDF.cpp  BSSRDF.h  BxDF.cpp  BxDF.h  Camera.cpp  Camera.h  Interaction.cpp  Interaction.h  Medium.cpp  Medium.h  RTXDevice.cpp  RTXDevice.h  Ray.h  Sampling.cpp  Sampling.h  Scene.cpp  Scene.h  Spectrum.cpp  Spectrum.h  Texture2D.h  Vertex.h
Source/Engine/Integrator/: AOIntegrator.cpp  AOIntegrator.h  Integrator.cpp  Integrator.h  NormalIntegrator.cpp  NormalIntegrator.h  PathIntegrator.cpp  PathIntegrator.h  VolPathIntegrator.cpp  VolPathIntegrator.h
Source/Engine/Light/: Light.cpp  Light.h
Source/Engine/Material/: Disney.cpp  Disney.h
Source/Engine/Math/: Frame.cpp  Frame.h  Math.h  Ray.h  TVector2.h  TVector3.h  Vector2.h  Vector3.h
Source/Engine/Sampler/: Sampler.h  Sobol.h
Submodules/assimp/lib/: assimp-vc142-mt.lib  zlibstatic.lib
